--- a/.github/workflows/gh-pr-stats.yml
+++ b/.github/workflows/gh-pr-stats.yml
@@ -1,4 +1,4 @@
-name: Update PR Summary (minimal, validated)
+name: Update PR Table (debug-friendly)
 
 on:
   workflow_dispatch:
@@ -9,12 +9,23 @@ jobs:
     permissions:
       contents: write
       pull-requests: read
+    env:
+      REPO: ${{ github.repository }}
 
     steps:
-      - name: Checkout
+      - name: Checkout (default branch)
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
-      - name: Ensure gh installed
+      - name: Print branch & repo info
+        run: |
+          echo "Repository: $REPO"
+          echo "Checked out ref:"
+          git rev-parse --abbrev-ref HEAD || true
+          git status --porcelain || true
+
+      - name: Ensure gh available
         run: |
           if ! command -v gh >/dev/null 2>&1; then
             sudo apt-get update -y
@@ -22,14 +33,126 @@ jobs:
           fi
           gh --version || true
 
-      - name: Fetch PRs (test)
-        env:
-          REPO: ${{ github.repository }}
+      - name: Fetch PRs (debug output)
         run: |
-          gh api -H "Accept: application/vnd.github+json" /repos/"$REPO"/pulls?state=all&per_page=5 > pr_list.json || true
-          echo "pr_list.json size: $(wc -c pr_list.json 2>/dev/null || true)"
-          head -n 5 pr_list.json || true
+          echo "Calling GH API for repo: $REPO"
+          gh api -H "Accept: application/vnd.github+json" /repos/"$REPO"/pulls?state=all&per_page=10 > pr_list.json || true
+          echo "=== pr_list.json preview ==="
+          head -n 200 pr_list.json || true
+          echo "=== length via jq (if available) ==="
+          if command -v jq >/dev/null 2>&1; then
+            jq '. | length' pr_list.json || true
+          else
+            echo "jq not installed"
+          fi
 
-      - name: Commit (no-op)
+      - name: Build markdown table (last 5) and fallback message
         run: |
-          echo "workflow completed"
+          python3 - <<'PY'
+import json, os, datetime
+repo = os.environ.get("REPO", "")
+prs = []
+try:
+    with open("pr_list.json","r",encoding="utf-8") as f:
+        prs = json.load(f)
+except Exception as e:
+    print("Could not load pr_list.json:", e)
+
+prs_sorted = sorted(prs, key=lambda p: p.get("created_at") or "", reverse=True)
+total = len(prs_sorted)
+open_count = sum(1 for p in prs_sorted if p.get("state") == "open")
+closed_count = sum(1 for p in prs_sorted if p.get("state") == "closed")
+merged_count = sum(1 for p in prs_sorted if p.get("merged_at"))
+
+lines = []
+lines.append(f"## 📊 Pull Request Stats for `{repo}`")
+lines.append("")
+lines.append(f"- Total PRs fetched: **{total}**  ")
+lines.append(f"- Open: **{open_count}**, Closed: **{closed_count}**, Merged: **{merged_count}**  ")
+lines.append("")
+if total == 0:
+    lines.append("_No pull requests found (or unable to fetch). If your repo has PRs, check Actions log for `pr_list.json` preview._")
+    lines.append("")
+else:
+    lines.append("| # | Title | Author | State | Merged at |")
+    lines.append("|---|-------|--------|:-----:|:---------:|")
+    for p in prs_sorted[:5]:
+        num = p.get("number")
+        title = (p.get("title") or "").replace("|","\\|")
+        url = p.get("html_url")
+        author = p.get("user",{}).get("login","")
+        state = p.get("state")
+        merged_at = p.get("merged_at") or ""
+        if merged_at:
+            try:
+                merged_at = datetime.datetime.fromisoformat(merged_at.replace("Z","+00:00")).strftime("%Y-%m-%d")
+            except:
+                pass
+        title_link = f"[{title}]({url})"
+        lines.append(f"| #{num} | {title_link} | {author} | {state} | {merged_at} |")
+
+md = "\n".join(lines) + "\n"
+with open("pr_table.md","w",encoding="utf-8") as out:
+    out.write(md)
+print("WROTE pr_table.md (size:", len(md), "chars )")
+PY
+
+      - name: Ensure README markers exist & show current snippet
+        run: |
+          README=README.md
+          if [ ! -f "$README" ]; then
+            echo "README.md not found; creating placeholder"
+            echo "# ${GITHUB_REPOSITORY}" > $README
+            echo "" >> $README
+          fi
+          # show current area around markers
+          echo "=== README head (first 200 lines) ==="
+          head -n 200 README.md || true
+          # Ensure start and end markers exist
+          if ! grep -q "<!-- gh-pr-stats-start -->" README.md; then
+            echo "" >> README.md
+            echo "<!-- gh-pr-stats-start -->" >> README.md
+            echo "<!-- gh-pr-stats-end -->" >> README.md
+            echo "Inserted markers"
+          else
+            echo "Markers already present"
+          fi
+          echo "=== README tail (last 60 lines) ==="
+          tail -n 60 README.md || true
+
+      - name: Insert table into README (force replace)
+        run: |
+          START="<!-- gh-pr-stats-start -->"
+          END="<!-- gh-pr-stats-end -->"
+          NEW="$(sed 's/[&/\]/\\&/g' pr_table.md)"
+          # Build replacement block
+          REPL="${START}\n\n${NEW}\n${END}"
+          awk -v start="$START" -v end="$END" -v repl="$REPL" '
+            BEGIN {inside=0}
+            {
+              if (index($0, start) && !inside) {
+                print repl
+                inside=1
+                next
+              }
+              if (index($0, end) && inside) {
+                inside=0
+                next
+              }
+              if (!inside) print $0
+            }
+            END { if (inside) print end }
+          ' README.md > README.tmp && mv README.tmp README.md
+          echo "Inserted PR table into README.md (preview):"
+          sed -n '1,120p' README.md || true
+
+      - name: Commit & push (debug)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md pr_table.md || true
+          git diff --staged --name-only || true
+          git commit -m "chore: update PR table (debug run)" || echo "No changes to commit"
+          git push || (echo "git push failed"; git status; exit 0)
